--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
   border-top: 2px solid rgb(94, 54, 22);
   border-bottom: 2px solid rgb(94, 54, 22);
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 /***********************************************************************
  *  NavBar
@@ -159,6 +160,46 @@ a {
 
 .bio-name {
   border-bottom: 2px solid rgba(94, 54, 22, 0.5);
+}
+/***********************************************************************
+ *  Form
+ **********************************************************************/
+.form-element {
+  display: flex;
+  justify-content: stretch;
+  background: red;
+}
+
+.form-contact {
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form-boxes {
+  border-bottom: 2px solid rgb(139, 110, 85);
+  border-top: 2px solid rgba(0, 0, 0, 0);
+  border-left: 2px solid rgba(0, 0, 0, 0);
+  border-right: 2px solid rgba(0, 0, 0, 0);
+  width: 350px;
+  background-color: rgba(19, 12, 0, 0.466);
+  margin-bottom: 10px;
+  color: rgb(230, 191, 119);
+  font-family: PLayfair, serif;
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 5px;
+  transition: 1s;
+}
+
+.small-box {
+  height: 25px;
+  text-align: center;
+}
+.form-boxes:hover {
+  background-color: rgba(36, 24, 6, 0.2);
+  border: 2px solid rgba(90, 72, 58, 0.3);
 }
 /***********************************************************************
  *  Footer
@@ -393,6 +434,10 @@ a {
     text-shadow: 2px 2px 10px #000000;
   }
 
+  .form-text {
+    font-family: Crushed, serif;
+  }
+
   .bio-tile {
     min-height: 600px;
   }
@@ -404,5 +449,12 @@ a {
     width: 100%;
     height: 100%;
     padding: 0px;
+  }
+
+  .form-contact {
+    max-width: 700px;
+    display: block;
+    flex-direction: none;
+    justify-content: none;
   }
 }
