--- a/style.css
+++ b/style.css
@@ -202,6 +202,27 @@ a {
   border: 2px solid rgba(90, 72, 58, 0.3);
 }
 /***********************************************************************
+ *  Testimonials
+ **********************************************************************/
+.testimonial-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.testimonial-person {
+  background-color: tomato;
+  border-radius: 50px;
+  height: 100px;
+  width: 100px;
+}
+
+#person1 {
+  background-image: url("https://randomuser.me/api/portraits/women/22.jpg");
+}
+
+/***********************************************************************
  *  Footer
  **********************************************************************/
 .footer {
@@ -277,6 +298,7 @@ a {
   width: 90%;
   letter-spacing: 0px;
   margin: 3px;
+  padding-top: 10px;
 }
 
 .tile1 {
