completed and corrected testimonials page

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -1,6 +1,7 @@
 .parent {
   position: relative;
   margin: 0 auto;
+  width: 500px;
 }
 
 .container {
@@ -34,7 +35,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 400px;
   height: 100%;
   pointer-events: none;
   z-index: 2;
@@ -49,9 +50,9 @@
 
 .next {
   composes: button;
-  right: 20%;
+  right: 0%;
   top: 90%;
-  transform: translateY(-50%) translateX(50%);
+  transform: translateY(-50%) translateX(-50%);
 }
 
 .prev {
@@ -59,4 +60,10 @@
   left: 20%;
   top: 90%;
   transform: translateY(-50%) translateX(-50%);
+}
+
+@media only screen and (max-width: 950px) {
+  .parent {
+    width: 400;
+  }
 }
