--- a/style.css
+++ b/style.css
@@ -132,104 +132,6 @@ a {
 .cover-logo:hover {
   filter: saturate(1);
 }
-
-/***********************************************************************
- *  Page Details
- **********************************************************************/
-.page-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
-.page-title {
-  font-size: 2em;
-  color: #e09200;
-  font-family: Crushed, serif;
-  padding: 20px 0px;
-}
-
-.member-info {
-  color: rgb(182, 142, 83);
-  font-style: italic;
-  text-transform: lowercase;
-  font-size: 19px;
-}
-
-.bio-name {
-  border-bottom: 2px solid rgba(94, 54, 22, 0.5);
-}
-/***********************************************************************
- *  Form
- **********************************************************************/
-.form-element {
-  display: flex;
-  justify-content: stretch;
-  background: red;
-}
-
-.form-contact {
-  max-width: 700px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.form-boxes {
-  border-bottom: 2px solid rgb(139, 110, 85);
-  border-top: 2px solid rgba(0, 0, 0, 0);
-  border-left: 2px solid rgba(0, 0, 0, 0);
-  border-right: 2px solid rgba(0, 0, 0, 0);
-  width: 350px;
-  background-color: rgba(19, 12, 0, 0.466);
-  margin-bottom: 10px;
-  color: rgb(230, 191, 119);
-  font-family: PLayfair, serif;
-  font-size: 18px;
-  padding: 5px;
-  border-radius: 5px;
-  transition: 1s;
-}
-
-.small-box {
-  height: 25px;
-  text-align: center;
-}
-.form-boxes:hover {
-  background-color: rgba(36, 24, 6, 0.2);
-  border: 2px solid rgba(90, 72, 58, 0.3);
-}
-/***********************************************************************
- *  Testimonials
- **********************************************************************/
-.testimonial-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-}
-
-.testimonial-person {
-  background-color: tomato;
-  border-radius: 50px;
-  height: 100px;
-  width: 100px;
-}
-
-#person1 {
-  background-image: url("https://randomuser.me/api/portraits/women/22.jpg");
-}
-
-/***********************************************************************
- *  Footer
- **********************************************************************/
-.footer {
-  background: #f3aaaa;
-  min-height: 20px;
-}
-
 /***********************************************************************
  *  Tiles/Content Styling
  **********************************************************************/
@@ -352,6 +254,135 @@ a {
 #vocalist {
   background-image: url("https://images.pexels.com/photos/1918159/pexels-photo-1918159.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
+
+/***********************************************************************
+ *  Page Details
+ **********************************************************************/
+.page-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.page-title {
+  font-size: 2em;
+  color: #e09200;
+  font-family: Crushed, serif;
+  padding: 20px 0px;
+}
+
+.member-info {
+  color: rgb(182, 142, 83);
+  font-style: italic;
+  text-transform: lowercase;
+  font-size: 19px;
+}
+
+.bio-name {
+  border-bottom: 2px solid rgba(94, 54, 22, 0.5);
+}
+/***********************************************************************
+ *  Form
+ **********************************************************************/
+.form-element {
+  display: flex;
+  justify-content: stretch;
+  background: red;
+}
+
+.form-contact {
+  max-width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form-boxes {
+  border-bottom: 2px solid rgb(139, 110, 85);
+  border-top: 2px solid rgba(0, 0, 0, 0);
+  border-left: 2px solid rgba(0, 0, 0, 0);
+  border-right: 2px solid rgba(0, 0, 0, 0);
+  width: 350px;
+  background-color: rgba(19, 12, 0, 0.466);
+  margin-bottom: 10px;
+  color: rgb(230, 191, 119);
+  font-family: PLayfair, serif;
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 5px;
+  transition: 1s;
+}
+
+.small-box {
+  height: 25px;
+  text-align: center;
+}
+.form-boxes:hover {
+  background-color: rgba(36, 24, 6, 0.2);
+  border: 2px solid rgba(90, 72, 58, 0.3);
+}
+/***********************************************************************
+ *  Testimonials
+ **********************************************************************/
+.testimonial-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+}
+
+.testimonial-person {
+  background-color: tomato;
+  border-radius: 50px;
+  height: 100px;
+  width: 100px;
+  /* filter: sepia(1); */
+  border: 5px solid rgb(185, 121, 25);
+}
+.testimonial-text {
+  width: 400px;
+}
+
+.testing {
+  display: flex;
+  justify-content: center;
+}
+#female1 {
+  background-image: url("https://randomuser.me/api/portraits/women/22.jpg");
+  background-position: center;
+}
+
+#female2 {
+  background-image: url("https://randomuser.me/api/portraits/women/12.jpg");
+  background-position: center;
+}
+
+#male1 {
+  background-image: url("https://randomuser.me/api/portraits/men/22.jpg");
+  background-position: center;
+}
+
+#male2 {
+  background-image: url("https://randomuser.me/api/portraits/men/12.jpg");
+  background-position: center;
+}
+
+.testimonial-tile {
+  max-width: 600px;
+  min-width: 600px;
+}
+
+/***********************************************************************
+ *  Footer
+ **********************************************************************/
+.footer {
+  background: #f3aaaa;
+  min-height: 20px;
+}
+
 /***********************************************************************
   *
   Media
@@ -478,5 +509,10 @@ a {
     display: block;
     flex-direction: none;
     justify-content: none;
+  }
+
+  .testimonial-tile {
+    min-width: 400px;
+    max-width: 400px;
   }
 }
