updated testimonials and bio

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -25,8 +25,8 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
+  padding: 10px 0px 0px 0px;
 }
 
 .controls {
