--- a/style.css
+++ b/style.css
@@ -280,6 +280,11 @@ a {
 
 .bio-name {
   border-bottom: 2px solid rgba(94, 54, 22, 0.5);
+  font-size: 20px;
+}
+
+#scroll-1 {
+  transform: rotate(180deg);
 }
 /***********************************************************************
  *  Form
@@ -490,6 +495,10 @@ a {
   .text-tile-text-minor {
     font-size: 18px;
     text-shadow: 2px 2px 10px #000000;
+  }
+
+  .bio-name {
+    font-size: 25px;
   }
 
   .form-text {
