added video card and updated pictures

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a {
 
 .cover-logo {
   margin: 20px 10px;
-  width: 600px;
+  width: 450px;
   transition: 0.5s;
   filter: saturate(0.5);
 }
@@ -211,6 +211,10 @@ a {
   display: flex;
   justify-content: flex-end;
 }
+.vertical-tile {
+  display: flex;
+  flex-direction: column;
+}
 
 .artist-img {
   min-height: 200px;
@@ -218,6 +222,16 @@ a {
   background-size: cover;
   background-position: center;
 }
+
+#video-container {
+  height: 450px;
+  width: 800px;
+}
+
+#video-text-tile {
+  margin-left: 0;
+}
+
 #cali {
   background-image: url("https://images.unsplash.com/photo-1572977438018-16c62331cecb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80");
 }
@@ -226,35 +240,8 @@ a {
   background-image: url("https://images.unsplash.com/photo-1605232433977-5b5d562812e9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=678&q=80");
 }
 
-#gig {
-  background-image: url("https://images.unsplash.com/photo-1508979822114-db019a20d576?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
-}
-
-#guitar {
-  background-image: url("https://images.unsplash.com/photo-1510915361894-db8b60106cb1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
-}
-
-#band-photo {
-  background-image: url("https://images.unsplash.com/photo-1483393458019-411bc6bd104e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80");
-}
-
-#guitarist1 {
-  background-image: url("https://images.unsplash.com/photo-1611648822527-f13d606d13cd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
-}
-
-#guitarist2 {
-  background-image: url("https://images.unsplash.com/photo-1598125009468-3d5f29d1f010?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1510&q=80");
-}
-
-#drummer {
-  background-image: url("https://images.pexels.com/photos/2114759/pexels-photo-2114759.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-}
-
-#vocalist {
-  background-image: url("https://images.pexels.com/photos/1918159/pexels-photo-1918159.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-}
 #group1 {
-  background-image: url("./public/Group_edit_orange.jpg");
+  background-image: url("./public/Group_bw.jpg");
 }
 
 #dave {
@@ -263,6 +250,10 @@ a {
 
 #dave_tim {
   background-image: url("./public/dave_tim_bw\ \(1\).jpg");
+}
+
+#dave_tim2 {
+  background-image: url("./public/dave_time2_bw.jpg");
 }
 
 #mike {
@@ -555,5 +546,17 @@ a {
   .testimonial-tile {
     min-width: 400px;
     max-width: 400px;
+  }
+
+  #video-text-tile {
+    margin-left: 0;
+    position: relative;
+    top: 0%;
+    bottom: 0%;
+  }
+
+  #video-container {
+    height: 225px;
+    width: 400px;
   }
 }
