--- a/style.css
+++ b/style.css
@@ -58,9 +58,16 @@ body {
   width: 100%;
   position: relative;
   padding: 10px 0px;
+  display: flex;
+  justify-content: center;
 }
 .navbar-links {
   font-family: Crushed, serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.link-container {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -75,10 +82,18 @@ a {
   border-bottom: 2px solid rgb(0, 0, 0);
 }
 .img-link {
+  display: none;
   display: flex;
   justify-content: center;
   transition: 1s;
 }
+
+.text-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .img-link:hover {
   filter: brightness(125%);
 }
@@ -86,8 +101,9 @@ a {
   text-shadow: 2px 2px 10px #cfa351;
 }
 .logo-image {
+  display: none;
   width: 150px;
-  height: 35px;
+  height: 30px;
 }
 .left-links a:hover,
 .right-links a:hover {
@@ -99,15 +115,21 @@ a {
 
 .left-links {
   position: absolute;
-  left: calc(50% - 210px);
+  left: calc(50% - 290px);
   top: 12px;
   padding-right: 10px;
 }
 
 .right-links {
   position: absolute;
-  right: calc(50% - 275px);
+  right: calc(50% - 285px);
   top: 12px;
+}
+
+.dropDown-btn {
+  display: none;
+  height: 30px;
+  width: 50px;
 }
 
 /***********************************************************************
@@ -459,6 +481,9 @@ a {
 @media only screen and (max-width: 950px) {
   .navlink {
     font-size: 22px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   .logo-image {
     padding-top: 5px;
@@ -558,5 +583,40 @@ a {
   #video-container {
     height: 225px;
     width: 400px;
+  }
+  .dropDown-btn {
+    display: block;
+  }
+  .logo-image {
+    display: block;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    float: right;
+  }
+
+  .dropdown-content {
+    display: block;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.85);
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+    border: 2px solid rgba(122, 110, 100, 0.65);
+  }
+
+  .dropdown-content a:hover {
+    color: #e09200;
+    border-top: 2px solid rgb(94, 54, 22);
+    border-bottom: 2px solid rgb(94, 54, 22);
+  }
+
+  .link-container {
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
   }
 }
