--- a/style.css
+++ b/style.css
@@ -50,87 +50,6 @@ body {
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.4);
 }
-/***********************************************************************
- *  NavBar
- **********************************************************************/
-.navbar {
-  background: rgba(19, 19, 19, 0.75);
-  width: 100%;
-  position: relative;
-  padding: 10px 0px;
-  display: flex;
-  justify-content: center;
-}
-.navbar-links {
-  font-family: Crushed, serif;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.link-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(195 169 141);
-  padding: 0px 8px;
-  transition: 0.5s;
-  border-top: 2px solid rgb(0, 0, 0);
-  border-bottom: 2px solid rgb(0, 0, 0);
-}
-.img-link {
-  display: none;
-  display: flex;
-  justify-content: center;
-  transition: 1s;
-}
-
-.text-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.img-link:hover {
-  filter: brightness(125%);
-}
-.navlink:hover {
-  text-shadow: 2px 2px 10px #cfa351;
-}
-.logo-image {
-  display: none;
-  width: 150px;
-  height: 30px;
-}
-.left-links a:hover,
-.right-links a:hover {
-  color: #e09200;
-  border-top: 2px solid rgb(94, 54, 22);
-  border-bottom: 2px solid rgb(94, 54, 22);
-  cursor: pointer;
-}
-
-.left-links {
-  position: absolute;
-  left: calc(50% - 290px);
-  top: 12px;
-  padding-right: 10px;
-}
-
-.right-links {
-  position: absolute;
-  right: calc(50% - 285px);
-  top: 12px;
-}
-
-.dropDown-btn {
-  display: none;
-  height: 30px;
-  width: 50px;
-}
 
 /***********************************************************************
  *  Cover
@@ -146,13 +65,8 @@ a {
 .cover-logo {
   margin: 20px 10px;
   width: 450px;
-  transition: 0.5s;
-  filter: saturate(0.5);
 }
 
-.cover-logo:hover {
-  filter: saturate(1);
-}
 /***********************************************************************
  *  Tiles/Content Styling
  **********************************************************************/
@@ -202,7 +116,7 @@ a {
   padding: 10px;
 }
 
-.tile:nth-child(even) .text-tile {
+.tile:nth-child(odd) .text-tile {
   margin-right: 20px;
   margin-left: 0;
 }
@@ -325,6 +239,23 @@ a {
 #scroll-1 {
   transform: rotate(180deg);
 }
+
+.songtitles {
+  font-family: Crushed, serif;
+  color: rgb(214, 195, 176);
+  padding: 2px;
+  transition: 0.5s;
+}
+.songtitles:hover {
+  color: #e09200;
+}
+.songtitles-container {
+  border: 2px solid #e09200;
+  width: 400px;
+  padding: 30px 0px;
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
 /***********************************************************************
  *  Form
  **********************************************************************/
@@ -430,197 +361,4 @@ a {
 .footer {
   background: #f3aaaa;
   min-height: 20px;
-}
-
-/***********************************************************************
-  *
-  Media
-  Queries
-  **********************************************************************/
-
-/* .content {
-    width: 90%;
-  }
-  .tile {
-    flex-direction: column;
-    position: relative;
-  }
-  .text-tile {
-    background-image: radial-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    height: 75%;
-    z-index: 10;
-    min-height: 0;
-    justify-content: center;
-  }
-
-  .img-tile {
-    width: 100%;
-    height: 300px;
-    z-index: 0;
-  }
-
-  .text-tile-text-emp {
-    font-size: 19px;
-    text-shadow: 2px 2px 10px #000000;
-  }
-  .text-tile-text-minor {
-    font-size: 18px;
-    text-shadow: 2px 2px 10px #000000;
-  }
-  .inner-tile {
-  }
-  .cover-logo {
-    max-width: 300px; 
-  }*/
-
-@media only screen and (max-width: 950px) {
-  .navlink {
-    font-size: 22px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  .logo-image {
-    padding-top: 5px;
-  }
-  .cover-logo {
-    max-width: 350px;
-  }
-  .left-links {
-    left: calc(50% - 165px);
-    flex-direction: column;
-  }
-
-  .right-links {
-    right: calc(50% - 205px);
-    flex-direction: column;
-  }
-  .content {
-    width: 400px;
-  }
-  .tile {
-    flex-direction: column;
-    position: relative;
-    width: 400px;
-    min-width: 1px;
-    padding: 5px;
-  }
-
-  .img-tile {
-    width: 100%;
-    z-index: 0;
-    height: 300px;
-  }
-
-  .text-tile {
-    background-image: radial-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5));
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 75%;
-    height: 75%;
-    z-index: 10;
-    min-height: 0;
-    justify-content: center;
-    margin-left: 0px;
-  }
-  .text-tile-text-emp {
-    font-size: 20px;
-    text-shadow: 2px 2px 10px #000000;
-    color: rgb(195 169 141);
-  }
-  .text-tile-text-minor {
-    font-size: 18px;
-    text-shadow: 2px 2px 10px #000000;
-  }
-
-  .bio-name {
-    font-size: 25px;
-  }
-
-  .form-text {
-    font-family: Crushed, serif;
-  }
-
-  .bio-tile {
-    min-height: 600px;
-  }
-  .bio-text-tile {
-    position: relative;
-    top: auto;
-    left: auto;
-    transform: none;
-    width: 100%;
-    height: 100%;
-    padding: 0px;
-  }
-
-  .form-contact {
-    max-width: 700px;
-    display: block;
-    flex-direction: none;
-    justify-content: none;
-  }
-
-  .testimonial-tile {
-    min-width: 400px;
-    max-width: 400px;
-  }
-
-  #video-text-tile {
-    margin-left: 0;
-    position: relative;
-    top: 0%;
-    bottom: 0%;
-  }
-
-  #video-container {
-    height: 225px;
-    width: 400px;
-  }
-  .dropDown-btn {
-    display: block;
-  }
-  .logo-image {
-    display: block;
-  }
-
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    float: right;
-  }
-
-  .dropdown-content {
-    display: block;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.85);
-    min-width: 150px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    right: 0;
-    border: 2px solid rgba(122, 110, 100, 0.65);
-  }
-
-  .dropdown-content a:hover {
-    color: #e09200;
-    border-top: 2px solid rgb(94, 54, 22);
-    border-bottom: 2px solid rgb(94, 54, 22);
-  }
-
-  .link-container {
-    width: 400px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #longDisplay {
-    display: none;
-  }
 }
